--- a/sketchPad.html
+++ b/sketchPad.html
@@ -5,10 +5,10 @@
     <title>OMP Canvas</title>
 </head>
 <header>
-    <button type="button" id="modeButton" onclick="">Text Mode</button>
+    <button type="button" id="modeButton" onclick="">Draw Mode</button>
 </header>
 <body>
-    <canvas id="OMPCanvas" width="100" height="100" style="border:1px solid #ffc425; background-color: #434343;"></canvas>
+    <canvas id="OMPCanvas" width="100" height="100"></canvas>
 </body>
 
 <script src="sketchPad.js"></script>
