--- a/sketchPad.html
+++ b/sketchPad.html
@@ -5,7 +5,15 @@
     <title>OMP Canvas</title>
 </head>
 <header>
-    <button type="button" id="modeButton" onclick="">Draw Mode</button>
+    <div>
+        <button type="button" id="modeButton" onclick="">Draw Mode</button>
+    </div>
+    <div>
+        <button type="button" id="redButton" onclick="changeColor('red')">Red</button>
+    </div>
+    <div>
+        <button type="button" id="whiteButton" onclick="changeColor('white')">White</button>
+    </div>
 </header>
 <body>
     <canvas id="OMPCanvas" width="100" height="100"></canvas>
