--- a/sketchPad.html
+++ b/sketchPad.html
@@ -14,6 +14,15 @@
     <div>
         <button type="button" id="whiteButton" onclick="changeColor('white')">White</button>
     </div>
+    <div>
+        <button type="button" id="greenButton" onclick="changeColor('green')">Green</button>
+    </div>
+    <div>
+        <button type="button" id="clearAllButton" onclick="clearAll()">Clear</button>
+    </div>
+    <div>
+        <button type="button" id="eraseButton" onclick="eraser()">Erase</button>
+    </div>
 </header>
 <body>
     <canvas id="OMPCanvas" width="100" height="100"></canvas>
