Fix touch and save

--- a/sketchPad.html
+++ b/sketchPad.html
@@ -23,6 +23,9 @@
     <div>
         <button type="button" id="eraseButton" onclick="eraser()">Erase</button>
     </div>
+    <div>
+        <button type="button" id="saveButton" onclick="saveCanvas()">Save</button>
+    </div>
 </header>
 <body>
     <canvas id="OMPCanvas" width="100" height="100"></canvas>
